# snakeforth

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-checks.yml
fourth/: fourth.py
fourth/tests/: test_fourth.py
snakeforth/: snakeforth.py
snakeforth/tests/: test_interpreter.py  test_programs.py  test_snakeforth.py
tests/: pyproject.toml  test_fourth.py
