[project]
name = "snakeforth"
version = "0.1.0"
description = "SnakeForth is a simple forth interpreter implemented in Python"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "black>=24.8.0",
    "pyright>=1.1.382.post1",
]
